<resources>
    <string name="app_name">Well Played</string>
    <string name="enter_username_hint">Kullanıcı Adı Giriniz</string>
    <string name="enter_mail_hint">E-mail Giriniz</string>
    <string name="enter_phone_hint">Telefon Giriniz</string>
    <string name="enter_password_hint">Şifre Giriniz</string>
    <string name="sign_up_button">Kayıt Ol</string>
    <string name="login_button">Giriş Yap</string>
    <string name="user_already_exists">Kullanıcı zaten mevcut.</string>
    <string name="login_failed">Giriş yapılamadı.</string>
    <string name="music">Müzik</string>
    <string name="play">Oynat</string>
    <string name="pause">Durdur</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>