<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:gravity="top|center"
        android:orientation="vertical"
        android:padding="24dp">

        <Space
            android:layout_width="match_parent"
            android:layout_height="32dp" />

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="36sp"
            android:text="@string/login_button"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="32dp" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:ems="12"
            android:hint="@string/enter_username_hint"
            android:autofillHints="username"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="17dp"
            tools:layout_editor_absoluteY="137dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:ems="12"
            android:hint="@string/enter_password_hint"
            android:autofillHints="password"
            android:inputType="textPassword"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="99dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_button"
            android:visibility="visible"/>
        <TextView
            android:id="@+id/tv_login_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="24sp"
            android:text="@string/login_failed"
            android:visibility="gone"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />


        <Button
            android:id="@+id/btn_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_button"
            tools:layout_editor_absoluteX="268dp"
            tools:layout_editor_absoluteY="177dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>


</RelativeLayout>